--- a/Views/Home/Internship.cshtml
+++ b/Views/Home/Internship.cshtml
@@ -1,25 +1,26 @@
 ﻿@{
     ViewData["Title"] = "Internship";
 }
+@section scripts {
+    <script type="text/javascript" src="~/js/index.js"></script>
+}
 <h1>@ViewData["Title"]</h1>
+<p>Here is our classroom</p>
+<ul id="list">
+    <li>Borys</li>
+    <li>Liova</li>
+    <li>Orest</li>
+    @for (var i = 0; i < Model.Members.Count; i++)
+    {
+        var member = Model.Members[i];
 
-        <p>Here is our classroom</p>
-        <ul id="list">
-            <li>Borys</li>
-            <li>Liova</li>
-            <li>Orest</li>
-            @for (var i = 0; i < Model.Members.Count; i++)
-            {
-                var member = Model.Members[i];
-
-            <li class="member">
-                @member
-            </li>
-            }
-        </ul>
-        <input id="newcomer" title="Name" type="text" />
-        <button id="add">Add new commer</button>
-        <br />
-        <br />
-        <img src="/images/steps.png" width="200px" />
-        <script src="/js/index.js"></script>
+    <li class="member">
+        @member
+    </li>
+    }
+</ul>
+<input id="newcomer" title="Name" type="text" />
+<button id="add">Add new commer</button>
+<br />
+<br />
+<img src="/images/steps.png" width="200px" />
