add api methods

--- a/Views/Home/Internship.cshtml
+++ b/Views/Home/Internship.cshtml
@@ -20,7 +20,8 @@
     }
 </ul>
 <input id="newcomer" title="Name" type="text" />
-<button id="add">Add new commer</button>
+<button id="add" class="btn btn-primary">Add new commer</button>
+<button id="clear" class="btn btn-secondary"> Clear</button>
 <br />
 <br />
 <img src="/images/steps.png" width="200px" />
