--- a/Views/Home/Internship.cshtml
+++ b/Views/Home/Internship.cshtml
@@ -1,27 +1,34 @@
 ﻿@{
     ViewData["Title"] = "Internship";
 }
+@section styles {
+    <!-- Read about this here https://fontawesome.com/icons?d=gallery&p=2 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+}
 @section scripts {
     <script type="text/javascript" src="~/js/index.js"></script>
 }
 <h1>@ViewData["Title"]</h1>
 <p>Here is our classroom</p>
 <ul id="list">
-    <li>Borys</li>
-    <li>Liova</li>
-    <li>Orest</li>
     @for (var i = 0; i < Model.Members.Count; i++)
     {
         var member = Model.Members[i];
 
     <li class="member">
-        @member
+        <span class="name">@member</span><span class="delete fa fa-pencil"></span><i class="fa fa-remove"></i>
     </li>
     }
 </ul>
 <input id="newcomer" title="Name" type="text" />
-<button id="add" class="btn btn-primary">Add new commer</button>
-<button id="clear" class="btn btn-secondary"> Clear</button>
+<button id="add" class="btn btn-primary">
+    <i class="fa fa-plus-circle"></i>
+    Add new commer
+</button>
+<button id="clear" class="btn btn-secondary">
+    <i class="fa fa-cut"></i>
+    Clear
+</button>
 <br />
 <br />
 <img src="/images/steps.png" width="200px" />
