added delete functionality

--- a/Views/Home/Internship.cshtml
+++ b/Views/Home/Internship.cshtml
@@ -15,8 +15,8 @@
     {
         var member = Model.Members[i];
 
-    <li class="member">
-        <span class="name">@member</span><span class="delete fa fa-pencil"></span><i class="fa fa-remove"></i>
+    <li id="@i" class="member">
+        <span class="name">@member</span><span class="fa fa-pencil"></span><i class="delete fa fa-remove"></i>
     </li>
     }
 </ul>
