--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using InternMVC
-@using InternMVC.Models
+﻿@using InternshipMVC
+@using InternshipMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
