--- a/Views/Home/Internship.cshtml
+++ b/Views/Home/Internship.cshtml
@@ -8,6 +8,32 @@
 @section scripts {
     <script type="text/javascript" src="~/js/index.js"></script>
 }
+@section modalWindows {
+    <!-- Modal -->
+    <div class="modal fade" id="editClassmate" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Edit Classmate</h4>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Name
+                        <input id="classmateName" title="Name" type="text">
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button id="submit" type="button" class="btn" data-dismiss="modal">Submit</button>
+                    <button id="cancel" type="button" class="btn" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+}
 <h1>@ViewData["Title"]</h1>
 <p>Here is our classroom</p>
 <ul id="list">
@@ -15,8 +41,12 @@
     {
         var member = Model.Members[i];
 
-    <li id="@i" class="member">
-        <span class="name">@member</span><span class="fa fa-pencil"></span><i class="delete fa fa-remove"></i>
+    <li class="member">
+        <div class="memberInfo">
+            <span class="name">@member</span>
+            <i class="delete fa fa-remove"></i>
+            <i class="startEdit fa fa-pencil" data-toggle="modal" data-target="#editClassmate"></i>
+        </div>
     </li>
     }
 </ul>
