--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+        @await RenderSectionAsync("ModalWindows", required: false)
     </div>
 
     <footer class="border-top footer text-muted">
