put lat, lon and key in the configuration

--- a/Views/Home/Weather.cshtml
+++ b/Views/Home/Weather.cshtml
@@ -13,7 +13,7 @@
 <p>Tomorrow</p>
 
 <div class="weather">
-    <p>Date: <div id="date">29.03.2021 11:34</div></p>
-    <p>Temperature: <div id="temperature">14 C</div></p>
-    <p>Summary: <div id="summary">chill</div></p>
+    <p>Date: <div id="date">29.03.1999 11:34</div></p>
+    <p>Temperature: <div id="temperature">temp</div></p>
+    <p>Summary: <div id="summary">summary</div></p>
 </div>
