--- a/Views/Home/Internship.cshtml
+++ b/Views/Home/Internship.cshtml
@@ -1,64 +1,44 @@
-﻿@{
-    ViewData["Title"] = "Internship";
-}
-@section styles {
-    <!-- Read about this here https://fontawesome.com/icons?d=gallery&p=2 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-}
-@section scripts {
-    <script type="text/javascript" src="~/js/index.js"></script>
-}
-@section modalWindows {
-    <!-- Modal -->
-    <div class="modal fade" id="editClassmate" role="dialog">
-        <div class="modal-dialog">
+﻿@model IEnumerable<InternshipMvc.Models.Intern>
 
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Edit Classmate</h4>
-                </div>
-                <div class="modal-body">
-                    <p>
-                        Name
-                        <input id="classmateName" title="Name" type="text">
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <button id="submit" type="button" class="btn" data-dismiss="modal">Submit</button>
-                    <button id="cancel" type="button" class="btn" data-dismiss="modal">Close</button>
-                </div>
-            </div>
+ 
 
-        </div>
-    </div>
-}
+@{ ViewData["Title"] = "Loading interns from the database"; }
 <h1>@ViewData["Title"]</h1>
-<p>Here is our classroom</p>
-<ul id="list">
-    @for (var i = 0; i < Model.Members.Count; i++)
-    {
-        var member = Model.Members[i];
 
-    <li class="member">
-        <div class="memberInfo">
-            <span class="name">@member</span>
-            <i class="delete fa fa-remove"></i>
-            <i class="startEdit fa fa-pencil" data-toggle="modal" data-target="#editClassmate"></i>
-        </div>
-    </li>
-    }
-</ul>
-<input id="newcomer" title="Name" type="text" />
-<button id="add" class="btn btn-primary">
-    <i class="fa fa-plus-circle"></i>
-    Add new commer
-</button>
-<button id="clear" class="btn btn-secondary">
-    <i class="fa fa-cut"></i>
-    Clear
-</button>
-<br />
-<br />
-<img src="/images/steps.png" width="200px" />
+ 
+
+<p>Use this page to detail your site's privacy policy.</p>
+
+ 
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RegistrationDateTime)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RegistrationDateTime)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
