--- a/Views/Home/Weather.cshtml
+++ b/Views/Home/Weather.cshtml
@@ -56,7 +56,7 @@
         {
             var member = Model[i];
 
-            <li class="member">
+            <li class="member" member-id="@member.Id">
                 <div class="memberInfo">
                     <span class="name">@member.Name</span><i class="delete fa fa-remove"></i>
                     <i class="startEdit fa fa-pencil" data-toggle="modal" data-target="#editClassmate"></i>
@@ -82,8 +82,6 @@
             Date: <div id="date">29.03.2021</div>
             Temperature: <div id="temperature">10 C</div>
             Summary: <div id="summary">Cool</div>
-
-
         </p>
     </div>
 </body>
