created chat page and added to navbar

--- a/Views/Home/Chat.cshtml
+++ b/Views/Home/Chat.cshtml
@@ -1,15 +1,28 @@
-﻿
-@{
-    Layout = null;
-}
-
+﻿@model IList<InternshipMvc.Models.Intern>
 <!DOCTYPE html>
-
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8" />
     <title>Chat</title>
 </head>
 <body>
+    @section styles {
+        <!-- Read about this here https://fontawesome.com/icons?d=gallery&p=2 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    }
+    @section scripts {
+        <script type="text/javascript" src="~/js/index.js"></script>
+    }
+    
+<h1>@ViewData["Title"]</h1>
+<p>Tomorrow</p>
+    <div class="weather">
+        <h2>Weather</h2>
+        <p>
+            Date: <div id="date">29.03.2021</div>
+            Temperature: <div id="temperature">10 C</div>
+            Summary: <div id="summary">Cool</div>
+        </p>
+    </div>
 </body>
 </html>
