simplified services and fixed chat

--- a/Views/Home/Chat.cshtml
+++ b/Views/Home/Chat.cshtml
@@ -23,7 +23,7 @@
 </div>
 <div class="row">
     <div class="col-6">
-        <ul id="messageList">
+        <ul id="messagesList">
             @for (var i = 0; i < Model.Count; i++)
             {
                 var message = Model[i];
